using System.Collections;
using UnityEngine;

public class EnemyThanChet : MonoBehaviour
{
    [Header("Stats")]
    public float moveSpeed = 2f;
    public float attackRange = 1.5f;
    public float attackCooldown = 1.5f;
    public float detectRange = 6f;
    public float attackDamage = 15f;
    
    [Header("References")]
    public BossHealthBar healthBar; // Gi·ªØ nguy√™n, gi·∫£ ƒë·ªãnh c√≥.

    [Header("Health")]
    [Tooltip("S√°t th∆∞∆°ng Player g√¢y ra trong 1 c√∫ ƒë·∫•m. (N√™n l√† 2f)")]
    [SerializeField] private float playerPunchDamage = 2f;
    [Tooltip("S·ªë l·∫ßn Player ph·∫£i ƒë·∫•m ƒë·ªÉ Enemy ch·∫øt. (C·∫ßn l√† 5)")]
    [SerializeField] private int requiredPunchesToKill = 5;
    private float maxHealth;
    private float currentHealth;

    [Header("Animation Timings")]
    [Tooltip("Th·ªùi gian ch·∫∑n Enemy di chuy·ªÉn trong khi Attack")]
    public float attackAnimationDuration = 1.0f;
    
    [Header("References")]
    public LayerMask playerLayer;

    // üîä AUDIO DECLARATIONS
    [Header("Audio")]
    public AudioClip idleSound;
    public AudioClip attackSound;
    public AudioClip deathSound;
    private AudioSource audioSource; // Th√™m private AudioSource

    private Transform player;
    private Animator animator;
    private Rigidbody2D rb;

    private bool isDead = false;
    private bool isAttacking = false;
    private bool isFacingRight = true;
    private float lastAttackTime = 0f;

    void Start()
    {
        animator = GetComponent<Animator>();
        rb = GetComponent<Rigidbody2D>();
        player = GameObject.FindGameObjectWithTag("Player")?.transform;

        // üîä SETUP AUDIO SOURCE
        audioSource = GetComponent<AudioSource>();
        if (audioSource == null)
        {
            audioSource = gameObject.AddComponent<AudioSource>();
            audioSource.playOnAwake = false;
        }

        lastAttackTime = Time.time;

        // KH·ªûI T·∫†O M√ÅU
        maxHealth = requiredPunchesToKill * playerPunchDamage;
        currentHealth = maxHealth;

        if (player == null)
        {
            Debug.LogWarning("‚ö†Ô∏è Kh√¥ng t√¨m th·∫•y Player! H√£y set Tag = 'Player' cho player GameObject");
        }
        
        // üîä B·∫ÆT ƒê·∫¶U IDLE SOUND (√Åp d·ª•ng cho c·∫£ Idle v√† Walking)
        StartIdleSound();

        Debug.Log($"‚úÖ Enemy {gameObject.name} ƒë√£ kh·ªüi t·∫°o! HP: {currentHealth}/{maxHealth}");
    }

    // ================== AUDIO HELPERS ==================

    // B·∫≠t Idle Sound (Loop)
    private void StartIdleSound()
    {
        if (idleSound != null && audioSource != null)
        {
            if (audioSource.clip != idleSound || !audioSource.isPlaying)
            {
                audioSource.clip = idleSound;
                audioSource.loop = true;
                audioSource.Play();
            }
        }
    }
    
    // D·ª´ng √¢m thanh Loop (Idle)
    private void StopLoopingSound()
    {
         if (audioSource != null && audioSource.isPlaying && audioSource.loop)
         {
             audioSource.Stop();
         }
    }

    // ============================================

    void Update()
    {
        if (isDead || player == null) return;
        
        if (isAttacking)
        {
            rb.linearVelocity = Vector2.zero;
            return;
        }

        float distance = Vector2.Distance(transform.position, player.position);

        // === ATTACK RANGE ===
        if (distance <= attackRange)
        {
            rb.linearVelocity = Vector2.zero;
            // üîä Gi·ªØ Idle/Walking Sound b·∫±ng StartIdleSound()
            animator.SetBool("isWalking", false); 
            StartIdleSound(); 
            FlipTowardsPlayer();

            if (Time.time - lastAttackTime >= attackCooldown)
            {
                StartCoroutine(Attack());
            }
        }
        // === DETECT RANGE (CHASE) ===
        else if (distance <= detectRange)
        {
            MoveTowardsPlayer();
        }
        // === OUT OF RANGE ===
        else
        {
            rb.linearVelocity = Vector2.zero;
            // üîä Gi·ªØ Idle/Walking Sound
            animator.SetBool("isWalking", false);
            StartIdleSound(); 
        }
    }

    // ============================================
    // MOVE TOWARDS PLAYER - Di chuy·ªÉn v·ªÅ ph√≠a player
    // ============================================
    private void MoveTowardsPlayer()
    {
        animator.SetBool("isWalking", true);
        StartIdleSound(); // üîä ƒê·∫£m b·∫£o √¢m thanh v·∫´n ch·∫°y khi di chuy·ªÉn

        Vector2 direction = (player.position - transform.position).normalized;
        rb.linearVelocity = new Vector2(direction.x * moveSpeed, rb.linearVelocity.y);

        if (direction.x > 0 && !isFacingRight) Flip();
        else if (direction.x < 0 && isFacingRight) Flip();
    }

    // ============================================
    // ATTACK - T·∫•n c√¥ng player
    // ============================================
    private IEnumerator Attack()
    {
        isAttacking = true;
        
        animator.SetTrigger("TgAttack");
        
        rb.linearVelocity = Vector2.zero;
        
        // üîä PH√ÅT √ÇM THANH T·∫§N C√îNG (D·ª´ng loop, ph√°t OneShot)
        StopLoopingSound();
        if (attackSound != null) audioSource.PlayOneShot(attackSound);
        
        yield return new WaitForSeconds(attackAnimationDuration);

        isAttacking = false;
        lastAttackTime = Time.time;
        
        // B·∫Øt ƒë·∫ßu l·∫°i Idle Sound sau khi t·∫•n c√¥ng xong
        StartIdleSound(); 
    }

    // ============================================
    // TAKE DAMAGE - Nh·∫≠n s√°t th∆∞∆°ng
    // ============================================
    public void TakeDamage(float dmg)
    {
        if (isDead) return;

        isAttacking = false;
        if (rb != null) rb.linearVelocity = Vector2.zero;
        
        // üîä KH√îNG C√ì HURTSOUND trong khai b√°o, nh∆∞ng n·∫øu c√≥ th√¨ code l√†:
        // if (hurtSound != null) audioSource.PlayOneShot(hurtSound);

        currentHealth -= dmg;
        Debug.Log($"üí• {gameObject.name} b·ªã nh·∫≠n {dmg} s√°t th∆∞∆°ng. M√°u c√≤n: {currentHealth}/{maxHealth}");

        if (currentHealth <= 0)
        {
            Die();
        }
        else
        {
            // üîë L·ªñI CODE G·ªêC: Trigger "isHurt" kh√¥ng t·ªìn t·∫°i. ƒê√£ x√≥a.
            // Gi·ªØ nguy√™n logic visual n·∫øu c·∫ßn: animator.SetTrigger("isHurt"); 
        }
        
        // B·∫Øt ƒë·∫ßu l·∫°i Idle Sound
        StartIdleSound();
    }

    // ============================================
    // DIE - Ch·∫øt
    // ============================================
    public void Die()
    {
        if (isDead) return;
        isDead = true;

        animator.SetTrigger("TgDeath"); 
        
        // üîä PH√ÅT √ÇM THANH CH·∫æT
        StopLoopingSound();
        if (deathSound != null) audioSource.PlayOneShot(deathSound);

        if (rb != null)
        {
            rb.linearVelocity = Vector2.zero;
            rb.simulated = false;
        }

        Collider2D col = GetComponent<Collider2D>();
        if (col != null) col.enabled = false;

        Debug.Log($"üíÄ {gameObject.name} ƒë√£ ch·∫øt!");

        Destroy(gameObject, 2f);

        this.enabled = false;
    }
    
    // ... (Gi·ªØ nguy√™n c√°c h√†m kh√°c) ...
    // ============================================
    // FLIP TOWARDS PLAYER - Quay v·ªÅ ph√≠a player
    // ============================================
    private void FlipTowardsPlayer()
    {
        float directionX = player.position.x - transform.position.x;
        if (directionX > 0 && !isFacingRight) Flip();
        else if (directionX < 0 && isFacingRight) Flip();
    }
    
    // ... (Gi·ªØ nguy√™n ApplyDamageToPlayer, Flip, Gizmos) ...
    public void ApplyDamageToPlayer()
    {
        if (player == null || isDead || !isAttacking) return;
        
        float distance = Vector2.Distance(transform.position, player.position);
        if (distance > attackRange) return;

        float directionToPlayer = player.position.x - transform.position.x;
        bool isPlayerInFront = (directionToPlayer > 0 && isFacingRight) ||
                               (directionToPlayer < 0 && !isFacingRight);

        if (isPlayerInFront)
        {
            var playerController = player.GetComponent<PlayerController>();
            if (playerController != null)
            {
                playerController.TakeDamage(attackDamage);
                Debug.Log($"‚öîÔ∏è {gameObject.name} t·∫•n c√¥ng Player! Damage: {attackDamage}");
            }
        }
    }
    
    private void Flip()
    {
        isFacingRight = !isFacingRight;
        Vector3 scale = transform.localScale;
        scale.x *= -1;
        transform.localScale = scale;
    }
    
    private void OnDrawGizmosSelected()
    {
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, attackRange);
        Gizmos.color = Color.yellow;
        Gizmos.DrawWireSphere(transform.position, detectRange);
    }
}